Working z3 implementation